{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "8d596aa4-5a62-46be-9078-94934b6f11bb",
            "actions": [
                {
                    "name": "PlayerTouch",
                    "type": "Button",
                    "id": "2bfc62b8-3b84-4943-8019-3a854641c0be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "93152d9b-e737-43ba-8b6b-71c445a4c6e6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6b7ed8ee-7ef9-4f01-baea-98ac17e35b1d",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08e660cf-4d1c-441f-80df-fee4a42bb664",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7653d682-336b-4dfe-9e04-2fb339331eff",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}